Fixed Broken CSS file
Due to a recent pull request of mine, the CSS file stopped working, now fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap");
 
 * {
   margin: 0%;
@@ -68,7 +68,7 @@ html {
   position: relative;
   opacity: 0.75;
   font-weight: bold;
-  font-family: 'Orbitron', sans-serif;
+  font-family: "Orbitron", sans-serif;
 }
 
 .cp-tag::before {
@@ -115,7 +115,6 @@ html {
     rgba(64, 37, 113, 1),
     rgba(51, 32, 102, 1)
   );
-  background-image: linear-gradient(to right, rgba(64, 37, 113, 1), rgba(51, 32, 102, 1));
   animation: animateTyping var(--typeSpeed) steps(var(--textLength)) forwards;
 }
 
@@ -146,9 +145,9 @@ html {
 
 .a-tag {
   text-decoration: none;
-  color: #1E1E23;
+  color: #1e1e23;
   opacity: 1;
-  font-family: 'work sans', sans serif;
+  font-family: "work sans", sans serif;
   font-size: 1.6em;
   font-weight: 400;
   transition: 200ms;
@@ -209,9 +208,8 @@ nav {
   border-radius: 3px;
   z-index: 1;
   transform-origin: 5px 0px;
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-    opacity 0.55s ease;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
   background: white;
 }
 
@@ -223,18 +221,18 @@ nav {
   transform-origin: 0% 100%;
 }
 
-#menuToggle input:checked~span {
+#menuToggle input:checked ~ span {
   opacity: 1;
   transform: rotate(45deg) translate(-3px, -1px);
-  background: #36383F;
+  background: #36383f;
 }
 
-#menuToggle input:checked~span:nth-last-child(3) {
+#menuToggle input:checked ~ span:nth-last-child(3) {
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
 }
 
-#menuToggle input:checked~span:nth-last-child(2) {
+#menuToggle input:checked ~ span:nth-last-child(2) {
   transform: rotate(-45deg) translate(0, -1px);
 }
 
@@ -242,15 +240,15 @@ nav {
   position: absolute;
   width: 220px;
   height: 100vh;
-  box-shadow: 0 0 10px #85888C;
+  box-shadow: 0 0 10px #85888c;
   margin: -50px 0 0 -50px;
   padding: 50px;
   padding-top: 125px;
-  background-color: #F5F6FA;
+  background-color: #f5f6fa;
   -webkit-font-smoothing: antialiased;
   transform-origin: 0% 0%;
   transform: translate(-100%, 0);
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
 }
 
 #menu li {
@@ -258,14 +256,14 @@ nav {
   transition-delay: 2s;
 }
 
-#menuToggle input:checked~ul {
+#menuToggle input:checked ~ ul {
   transform: none;
 }
 
 .sectionHead {
   font-size: 2em;
   color: black;
-  font-family: 'Orbitron', sans-serif;
+  font-family: "Orbitron", sans-serif;
   text-transform: uppercase;
   font-weight: bold;
   margin-top: 5%;
@@ -274,7 +272,7 @@ nav {
 .sectionHeadLight {
   font-size: 2em;
   color: white;
-  font-family: 'Orbitron', sans-serif;
+  font-family: "Orbitron", sans-serif;
   text-transform: uppercase;
   font-weight: bold;
   margin-top: 5%;
